Feat: jar file