@@ -1,1 +1,3 @@
 [![Review Assignment Due Date](https://classroom.github.com/assets/deadline-readme-button-22041afd0340ce965d47ae6ef1cefeee28c7c493a6346c4f15d667ab976d596c.svg)](https://classroom.github.com/a/IY9augGa)
+
+java --module-path "C:\Users\PC\javafx-sdk-25.0.2\lib" --add-modules javafx.controls,javafx.fxml --enable-native-access=ALL-UNNAMED -jar "C:\Users\PC\IdeaProjects\Progmeth_project\build\libs\Progmeth_project-1-with-sources.jar"
